--- a/templates/actor/parts/character/actor-partial-hitlocations.html
+++ b/templates/actor/parts/character/actor-partial-hitlocations.html
@@ -9,12 +9,12 @@
         <table class="hitlocationtable"  border="2">
         <thead>
             <tr>
-                <th class="hitlocationname">{{localize "RQG.HitLocations"}}</th>
-                <th class="hitlocationlockedfield">{{localize "RQG.RANGE"}}</th>
-                <th class="hitlocationlockedfield">{{localize "RQG.HITPOINTS"}}</th>
-                <th class="hitlocationlockedfield">{{localize "RQG.MAXHITPOINTS"}}</th>
-                <th class="hitlocationlockedfield">{{localize "RQG.ARMOR"}}</th>
-                <th class="hitlocationlockedfield">{{localize "RQG.WOUNDS"}}</th>
+                <th class="thead-hitlocationname">{{localize "RQG.HitLocations"}}</th>
+                <th class="thead-hitlocationlockedfield">{{localize "RQG.RANGE"}}</th>
+                <th class="thead-hitlocationlockedfield">{{localize "RQG.HITPOINTS"}}</th>
+                <th class="thead-hitlocationlockedfield">{{localize "RQG.MAXHITPOINTS"}}</th>
+                <th class="thead-hitlocationlockedfield">{{localize "RQG.ARMOR"}}</th>
+                <th class="thead-hitlocationlockedfield">{{localize "RQG.WOUNDS"}}</th>
             </tr>
         </thead>
         <tbody>
@@ -43,12 +43,12 @@
         </div>   
         <table class="hitlocationtable"  border="2">
         <thead>
-            <th class="hitlocationunlockedfield">{{localize "RQG.HitLocations"}}</th>
-            <th class="hitlocationunlockedfield">{{localize "RQG.RANGE"}}</th>
-            <th class="hitlocationunlockedfield">{{localize "RQG.HP"}}</th>
-            <th class="hitlocationunlockedfield">{{localize "RQG.MAXHITPOINTS"}}</th>
-            <th class="hitlocationunlockedfield">{{localize "RQG.ARMOR"}}</th>
-            <th class="hitlocationunlockedfield" colspan="2">{{localize "RQG.WOUNDS"}}</th>
+            <th class="thead-hitlocationlockedfield">{{localize "RQG.HitLocations"}}</th>
+            <th class="thead-hitlocationlockedfield">{{localize "RQG.RANGE"}}</th>
+            <th class="thead-hitlocationlockedfield">{{localize "RQG.HP"}}</th>
+            <th class="thead-hitlocationlockedfield">{{localize "RQG.MAXHITPOINTS"}}</th>
+            <th class="thead-hitlocationlockedfield">{{localize "RQG.ARMOR"}}</th>
+            <th class="thead-hitlocationlockedfield" colspan="2">{{localize "RQG.WOUNDS"}}</th>
         </thead>
         <tbody>                
         {{#each data.hitlocations as |hl id|}}
