--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -1,30 +1,33 @@
 <form class="{{cssClass}}" autocomplete="off">
-    {{ log cssClass }}
+    <style>
+        :root {
+            --main-text-color: {{getGameSetting "generalTextColor"}};
+            --main-text-font: {{getGameSetting "generalTextFont"}};
+        }
+    </style>    
     {{!-- Sheet Header --}}
     {{> "systems/runequest/templates/actor/parts/character/actor-sheetheader.html"}}
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="nav-sheet-tabs sheet-tabs tabs flexrow" data-group="primary">
-        <a class="item" data-tab="skills">{{localize 'RQG.Skills'}}</a>
-        <a class="item" data-tab="combat">{{localize 'RQG.Combat'}}</a>
-        <!--
-        <a class="item" data-tab="herosoul">{{localize 'RQG.HEROSOUL'}}</a>
-        -->
-        <a class="item" data-tab="attributes">{{localize 'RQG.Runes'}}&nbsp;&amp;&nbsp;{{localize 'RQG.Passions'}}</a>
-
-        <a class="item" data-tab="magic">{{localize 'RQG.Magic'}}</a>
-        <!--
-        <a class="item active" data-tab="summary">{{localize 'RQG.MainTab'}}</a>
-        -->
-        <a class="item" data-tab="description">{{localize 'RQG.Backstory'}}</a>
-        <a class="item" data-tab="items">{{localize 'RQG.Items'}}</a>
-        {{log data.flags.locked}}
         {{#if data.flags.locked}}
             <a class="unlock-character-sheet" title="{{localize 'RQG.UnlockSheet'}}"> <i class="fas fa-lock"></i> </a>
         {{else}}
             <a class="unlock-character-sheet" title="{{localize 'RQG.LockSheet'}}"> <i class="fas fa-lock-open"></i></a>
         {{/if}}
+        <a class="item actor-item" data-tab="skills">{{localize 'RQG.Skills'}}</a>
+        <a class="item actor-item" data-tab="combat">{{localize 'RQG.Combat'}}</a>
+        <!--
+        <a class="item" data-tab="herosoul">{{localize 'RQG.HEROSOUL'}}</a>
+        -->
+        <a class="item actor-item" data-tab="attributes">{{localize 'RQG.Runes'}}&nbsp;&amp;&nbsp;{{localize 'RQG.Passions'}}</a>
 
+        <a class="item actor-item" data-tab="magic">{{localize 'RQG.Magic'}}</a>
+        <!--
+        <a class="item active" data-tab="summary">{{localize 'RQG.MainTab'}}</a>
+        -->
+        <a class="item actor-item" data-tab="description">{{localize 'RQG.Backstory'}}</a>
+        <a class="item actor-item" data-tab="items">{{localize 'RQG.Items'}}</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -60,7 +63,7 @@
         </div>
         {{!-- Attributes Tab --}}
         <div class="tab attributes" data-group="primary" data-tab="attributes">
-            {{> "systems/runequest/templates/actor/parts/character/actor-runesandpassions.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-runesandpassionsv2.html"}}
         </div>
         {{!-- Flags Tab --}}
         <div class="tab flags" data-group="primary" data-tab="flags">
