--- a/templates/actor/parts/character/actor-combat.html
+++ b/templates/actor/parts/character/actor-combat.html
@@ -4,8 +4,8 @@
         <ol class="skills-list">
             {{!-- Defense --}}
             <table class="combat-defense-table" border="2">
-                <thead>
-                    <th colspan="{{data.defense.length}}">{{localize "RQG.Defense"}}</th>
+                <thead class="combat-table-header">
+                    <th class="combat-table-thead" colspan="{{data.defense.length}}">{{localize "RQG.Defense"}}</th>
                 </thead>
                 <tbody>
                     <tr>
@@ -21,11 +21,11 @@
     </div>
 </div>
 {{!-- Hit Locations --}}
-<ol class="skills-list">          
+<div class="summary-row flexrow">          
     <div class="skill-category">
         {{> "systems/runequest/templates/actor/parts/character/actor-partial-hitlocations.html"}}
     </div>
-</ol>
+</div>
 {{> "systems/runequest/templates/actor/parts/character/actor-partial-attacks.html" attacks=data.attacks.melee attacktype="melee" attacklabel="RQG.MeleeAttacks"}}
 {{> "systems/runequest/templates/actor/parts/character/actor-partial-attacks.html" attacks=data.attacks.missile  attacktype="missile" attacklabel="RQG.MissileAttacks"}}
 {{> "systems/runequest/templates/actor/parts/character/actor-partial-attacks.html" attacks=data.attacks.natural attacktype="natural" attacklabel="RQG.NaturalAttacks"}}
