--- a/templates/actor/parts/character/actor-runesandpassionsv2.html
+++ b/templates/actor/parts/character/actor-runesandpassionsv2.html
@@ -26,10 +26,10 @@
     </div>
     -->
     <div class="elemental-rune-grid-container">
+        {{log "Runes and Passions with Path:"}}
+        {{log path}}
         {{#each data.elementalrunes as |elementalrune id|}}
-        <div class="elemental-rune-{{id}} elemental-rune tooltip" data-rune="{{id}}">
-            <span class="tooltiptext">{{localize elementalrune.label}}</span>
-        </div>
+        <img class="elemental-rune-{{id}} elemental-rune" data-rune="{{id}}" src="/systems/runequest/styles/img/{{id}}.png">
         <div class="elemental-rune elemental-rune-{{id}}-value" data-rune="{{id}}">
             <span><a class="elementalrunes-roll rollable" data-rune="{{id}}">{{elementalrune.value}}</a></span>         
         </div>
@@ -38,9 +38,7 @@
     <div class="power-rune-grid-container">
         {{#each data.powerrunes as |powerrunepair pairid|}}
             {{#each powerrunepair as |powerrune runeid|}}
-                <div class="elemental-rune power-rune-{{runeid}} tooltip" >
-                    <span class="tooltiptext">{{localize powerrune.label}}</span>               
-                </div>
+                <img class="elemental-rune power-rune-{{runeid}}" src="systems/runequest/styles/img/{{runeid}}.png"/> 
                 <div class="elemental-rune power-rune-{{runeid}}-value" data-runepair="{{pairid}}">
                     <a class="powerrunes-roll" data-rune="{{runeid}}">{{powerrune.value}}</a>
                 </div>            
